Fix ExternalURLTabUsageRecorderTestCase.testEvictedTabReloadFailure

Resetting _staticHTMLViewController will deallog the WKWebView.
The scroll view must be detached before that.

Bug: 748404
Change-Id: I89ce9c8f1e8b23ab72184617510635b24b9bb077
Reviewed-on: https://chromium-review.googlesource.com/584467
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489333}