ios/chrome/browser/ui/static_content/static_html_native_content.mm
@@ -157,6 +157,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   }
   _webUsageEnabled = webUsageEnabled;
   if (!_webUsageEnabled) {
+    [_overscrollActionsController invalidate];
+    [[self scrollView] setDelegate:nil];
     _staticHTMLViewController = nil;
   }
 }
